Eliminada la relación manytomany